--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   },
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-session-knex": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.3",
     "sqlite3": "^5.0.2"
   },
